--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,42 @@
     <th>Email</th>
   </tr>
   <% @users.each do |user| %>
-    <%= render 'user_row', :user => user %>
+  <%= render 'user_row', :user => user %>
   <% end %>
 </table>
+<div class="pagination">
+  <ul>
+    <% if @is_first_page %>
+      <li class="disabled"><a href="#">&laquo;</a></li>
+    <% else %>
+      <li><a href="/<%= @page_num - 1 %>">&laquo;</a></li>
+    <% end %>
+
+    <% 3.times do |i|%>
+      <% new_page_num = @page_num - 3 + i %>
+      <% if new_page_num < 1 %>
+        <% break %>
+      <% end %>
+      <li><a href="/<%= new_page_num %>"><%= new_page_num %></a></li>
+    <% end %>
+
+    <li class="active"><a href="#"><%= @page_num %></a></li>
+
+    <% 3.times do |i|%>
+      <% new_page_num = @page_num + i + 1 %>
+      <% if new_page_num == @last_page_num+1 %>
+        <% break %>
+      <% end %>
+        <li><a href="/<%= new_page_num %>"><%= new_page_num %></a></li>
+
+    <% end %>
+
+
+    <% if @is_last_page %>
+      <li class="disabled"><a href="#">&raquo;</a></li>
+    <% else %>
+      <li><a href="/<%= @page_num + 1 %>">&raquo;</a></li>
+    <% end %>
+  </ul>
+</div>
+
